# claude-unlimited-backend

./: .env.example  .env.template  ClaudeUnleashed_Analysis.md  NEW_README.md  Procfile  README.md  app.py  backend_directory_structure.txt  chat_history.db  project_structure.txt  pyproject.toml  pytest.ini  requirements.txt  todo.md  wsgi.py
.github/workflows/: ci-cd.yaml  production-cicd.yaml  staging-cicd.yaml
app/: __init__.py  config.py  routes.py
app/services/: anthropic_service.py  chat_service.py
app/tests/: base_test.py  conftest.py  smoke_tests.py  test_api.py  test_endpoints.py
app/utils/: auth.py  database.py  detailed_project_structure.txt  logger.py  project_structure.txt  structure.py  supabase testing.py  token_counter.py
backend/: chat_history.db
backend/app/: __init__.py  routes.py  run.py
backend/app/services/: anthropic_service.py  chat_service.py
backend/app/utils/: structure.py
scripts/: env_template_generator.py  project_structure_generator.py  sanity_check.sh
